	changes.

	* libfreeipmi/src/ipmi-msg-support-cmds.h,
	libfreeipmi/src/ipmi-msg-support-cmds.c: Code cleanup.  Make
	function name consistent with rest of library.

	* libfreeipmi/src/ipmi-msg-support-cmds-udm.c: Adjust for code
	changes.

	* libfreeipmi/src/ipmi-watchdog.h,
	libfreeipmi/src/ipmi-watchdog.c: Code cleanup.

	* libfreeipmi/src/bmc-watchdog.c: Adjust for code changes.

2006-02-13  Albert Chu <chu11@llnl.gov>

        Collective fixes from branch al_fiid_rearchitect_branch at tag
	al_fiid_rearchitect_branch_final.  See ChangeLog in branch for
	detailed day by day changes.

	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c: Re-implemented
	with new, more abstract interface.

	* libfreeipmi/src/bit-ops.c (bits_extract, bits_merge): Add parameter checks.

	* libfreeipmi/src/bit-ops.c (bits_merge): Fix bit shifting bug.

	* libfreeipmi/src/ipmi-chassis-cmds.c: Support optional fields
	with get chassis status response and chassis identify request.

	* libfreeipmi/src/ipmi-sessions.h,
	libfreeipmi/src/ipmi-sessions.c,
	libfreeipmi/src/ipmi-lan-interface.c: Support optional auth_code
	in LAN sessio header through one template.

	* libfreeipmi/src/ipmi-lan-interface-udm.c: Use interface
	assemble/unassembly functions rather than UDM functions.

	* Support new fiid interface globally.

2006-02-13  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-kcs-interface.c (ipmi_kcs_read): Fix logic bug.

	* tagged al_libfreeipmi_cleanup_branch_final_merge_complete.

	* libfreeipmi/src/ipmi-udm.c (ipmi_inband_close, ipmi_cmd): SSIF
	interface bug fixes.

	* libfreeipmi/src/ipmi-udm.h: Remove unecessary struct members.

	* tagged al_libfreeipmi_cleanup_branch_final_merge_complete_2.
	
2006-02-13  Albert Chu  <chu11@llnl.gov>

	* Bring in cleanup changes from al_libfreeipmi_cleanup_branch at
	tag al_libfreeipmi_cleanup_branch_final.

	* libfreeipmi/src/ipmi-sensor-types.h,
	libfreeipmi/src/ipmi-sensor-types.c: Remove old unused arrays.
